# GetStockPrices

./: 2021-04-15prices.csv  analytics.py  backend.py  bot_actions.py  constants.py  database_actions.py  error.txt  functions.py  mail_list.txt  main.py  new_stocks.csv  notifications.py  notify.csv  notify2.csv  prices.csv  pyproject.toml  stocks.csv
Extra Files/: 2021-04-13prices.csv  2021-04-14prices.csv  Dated_Functions  notify2.csv
help_docs/: list  main  notify  remove
